# configures some basic black settings per this article:
# https://ljvmiranda921.github.io/notebook/2018/06/21/precommits-using-black-and-flake8/
[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.env
  | _build
  | buck-out
  | build
  | dist
)/
'''
[tool.liccheck]
# Authorized and unauthorized licenses in LOWER CASE
authorized_licenses = [
        "bsd",
        "new bsd",
        "bsd license",
        "new bsd license",
        "simplified bsd",
        "apache",
        "apache 2.0",
        "apache license 2.0",
        "apache software license",
        "apache software",
        "gnu lgpl",
        "gnu lesser general public license v2 (lgplv2)",
        "gnu general public license v2 (gplv2)",
        "gnu library or lesser general public license (lgpl)",
        "gpl v3",
        "lgpl with exceptions or zpl",
        "isc license",
        "isc license (iscl)",
        "mit",
        "mit license",
        "mozilla public license 2.0 (mpl 2.0)",
        "public domain",
        "python software foundation license",
        "python software foundation",
        "zpl 2.1"
]

[tool.pylint."MESSAGE CONTROL"]
disable = [
  "C0114"
]

[tool.poetry]
name = "data-pipeline"
version = "0.1.0"
description = "Data processing scripts for justice40"
authors = ["CEJST Development Team"]
license = "CC0 1.0 Universal"

[tool.poetry.dependencies]
python = "^3.9"
pip = "^21.1.2"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
flake8 = "^3.9.2"
pylint = "^2.8.3"
tox = "^3.23.1"
pytest = "^6.2.4"
safety = "^1.10.3"
liccheck = "^0.6.0"
pytest-cov = "^2.12.1"
pre-commit = "^2.13.0"
pip = "^21.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
